fix for disalignment on middle sized screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -144,7 +144,7 @@ header {
   display: flex;
   color: white;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   font-family: 'roboto', 'Courier New', Courier, monospace;
   font-size: 20px;
   font-weight: 900;
@@ -153,6 +153,7 @@ header {
     url(../assets/bgtopnews1.webp),
     center;
   background-size: cover;
+  background-position: 50% 50%;
   grid-area: top-news1;
 }
 
@@ -902,6 +903,7 @@ footer {
 
   .bottom-tittle {
     font-size: 56px;
+
   }
 
   .section-tittle {
